# capstone_insurance

./: .gitignore  README.md  data_quality_log.txt  pyproject.toml  requirements.txt  user_story.md
config/: db_config.py  env_config.py
data/processed/: correlation_table.csv
notebooks/: data_exploration.ipynb
scripts/: run_app.py  run_etl.py
src/extract/: extract.py  extract_all.py
src/load/: load.py  load_correlation.py
src/streamlit/: home.py
src/streamlit/pages/: app1.py  app2.py  home_page.py
src/transform/: transform.py  transform_all.py  validate.py
src/utils/: db_table_check.py  logging_utils.py
tests/component_tests/: test_db_utils_component.py
tests/unit_tests/: test_db_utils.py  test_env_config.py  test_exctract_all.py  test_extract.py  test_logging_utils.py  test_transform.py  tests_transform_all.py
